--- a/updated/header.html
+++ b/updated/header.html
@@ -9,11 +9,9 @@
       <li><a href="clients_bootstrap.html">Clients</a></li>
       <li><a href="Training_bootstrap.html">Training </a></li>
      <!--  <li><a href="careers.html">Careers</a></li> -->
-      <li><a class="contact-button" href="contact_bootstrap.html">Say Hello!</a></li>
+      <li><a class="contact-button" href="contact_bootstrap.html" style="margin-left: 15px;margin-top: 1px;">Say Hello!</a></li>
     </ul>
   </header>
-
-
 
 
 </html>
