button issue fixed

--- a/updated/contact_bootstrap.html
+++ b/updated/contact_bootstrap.html
@@ -84,7 +84,7 @@
 		    </div>
 		    <div class="col-md-2 ml-auto mt-3">
 		       <div class="btn-group btn-group-sm">
-  					<button type="button" class="btn btn-danger" style="padding: 10% 100%;border-radius: 20px;background-color: #F9535E">Send</button>
+  					<button type="button" class="btn btn-danger btn-block" style="border-radius: 20px;background-color: #F9535E">Send</button>
             
 			   </div> 
 		    </div>
