--- a/updated/work_bootstrap.html
+++ b/updated/work_bootstrap.html
@@ -124,8 +124,8 @@
         <div class="carousel-cell"> <img src="assets/1.png" style="width:30vw;"></div>
           <div class="carousel-cell"><img src="assets/3.png" style="width: 40vw;"></div>
         <div class="carousel-cell"><img src="assets/4.png" style="width:58vw;"></div>
-          <div class="carousel-cell"><a href="usdz/redvelvet.usdz"><img src="assets/5.png" style="width: 60vw;"></a></div>
-        <div class="carousel-cell"> <a href="usdz/tansmallsofa.usdz"><img src="assets/6.png" style="width:30vw;"></a></div>      
+          <div class="carousel-cell"><img src="usdz/redvelvet.usdz" style="width: 60vw;" onerror=this.src="assets/5.png"></div>
+        <div class="carousel-cell"><img src="usdz/tansmallsofa.usdz" style="width:30vw;" onerror=this.src="assets/6.png"></div>      
       </div>
     </div>
 
