--- a/updated/Training_bootstrap.html
+++ b/updated/Training_bootstrap.html
@@ -26,12 +26,10 @@
     {
       border-left: solid 3px #F9414D;
       border-right: solid 3px #F9414D;
-      padding-left: 10px;
       cursor: pointer;
     }
 
-    
-    
+  
     .round
     {
       width: 50px;
@@ -181,15 +179,15 @@ function checkcourse(a)
 
     <br>
 
-<div class="row my-5 offset-1" style="font-family: seui-b">
-    <div class="col-md-3 col-sm-12" onclick="checkcourse(1)">
-    <h4 class="item-certify">Certified UX & UI 1 <br> AR & VR Designer</h4>
+<div class="row my-5 offset-1 text-center" style="font-family: seui-b">
+    <div class="col-md-3 col-sm-12 item-certify" onclick="checkcourse(1)">
+    <h4 >Certified UX & UI <br> AR & VR Designer</h4>
     </div> 
-    <div class="col-md-3 offset-md-1"  onclick="checkcourse(2);">
-     <h4 class="item-certify cert1">Certified UX & UI 2<br> AR & VR Designer</h4>
+    <div class="col-md-3 offset-md-1 item-certify"  onclick="checkcourse(2);">
+     <h4 class="cert1">Certified UX & UI<br> AR & VR Designer</h4>
     </div>
-    <div class="col-md-3 offset-md-1"  onclick="checkcourse(3);">
-     <h4 class="item-certify cert2">Certified UX & UI 3<br> AR & VR Designer</h4>
+    <div class="col-md-3 offset-md-1 item-certify"  onclick="checkcourse(3);">
+     <h4 class="cert2">Certified UX & UI<br> AR & VR Designer</h4>
     </div>
 </div>
   <br>
