--- a/wedding/index.html
+++ b/wedding/index.html
@@ -118,11 +118,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
+					<h2>Tying the Knot !</h2>
+					<br>
 					<h3>On September 16th, 2019</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<p style="font-size: 15px;">@ Periyasamy Udaiyar Thirumana Mandapam, Veeranam Road, Valasiyur.</p>
 				</div>
 			</div>
+			<br>
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
 					<div class="groom">
@@ -178,7 +180,15 @@
 										<span>September 15</span>
 										<!-- <span>November, 2016</span> -->
 									</div>
-									<p>we are to share this special day with all of you and kindly grace this occasion with your presence and blessing.</p>
+									<div class="event-col">
+										<i class="icon-home"></i>
+										<p class="text-center">Periyasamy Udaiyar Thirumana Mandapam, Veeranam Main Road, Valasiyur.</p>
+									</div>
+									<div class="event-col">
+										<i class="icon-heart2"></i>
+										<p>we are to share this special day with all of you and kindly grace this occasion with your presence and blessing.</p>
+									</div>
+									
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
@@ -186,7 +196,7 @@
 									<h3>Wedding Party</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>7:00 PM</span>
+										<span>6:00 PM</span>
 										<!-- <span>12:00 AM</span> -->
 									</div>
 									<div class="event-col">
@@ -194,8 +204,16 @@
 										<span>September 18</span>
 										<!-- <span>November, 2016</span> -->
 									</div>
-									<p>Destiny brought us together and now love will seal our bond.
-									kindly grace this occasion with your presence and blessing.</p>
+									<div class="event-col">
+										<i class="icon-home"></i>
+										<p class="text-center">G.N. MAHAL<br> Arcot, Vellore.</p>
+									</div>
+									<div class="event-col">
+										<i class="icon-heart2"></i>
+										<p class="text-center">Destiny brought us together and now love will seal our bond.
+										 kindly grace this occasion with your presence and blessing.</p>
+									</div>
+									
 								</div>
 							</div>
 						</div>
