--- a/updated/course1.html
+++ b/updated/course1.html
@@ -132,7 +132,9 @@
                   <br/>
                   <br/>
                   <div class="row d-flex justify-content-center">
-                  <button class="btn btn-danger">Register</button>
+                  <button class="btn btn-danger theading">Register</button>
                   </div>
+                  <br/>
+                  <br/>
 
    </div>
