--- a/wedding/index.html
+++ b/wedding/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding Invitation</title>
+	<title>Sathish and Haswini Wedding Invitation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="We are to share this special day with all of you and kindly grace this occasion with your presence and blessing." />
 	<meta name="keywords" content="wedding, responsive, invitation, template" />
