--- a/updated/course1.html
+++ b/updated/course1.html
@@ -1,12 +1,9 @@
 <div class="course1">
                   <div class="ml-manual" style="font-family: seui;">
-                  <div class="row move-left">
-                  <div class="offset-2 row">
+                  <div class="move-left">
                   <h5>Course Introduction 1</h5>
-                  </div>
                   <br/>
-                  <div class="offset-2 row ">
-                  <div class="mx-5 my-3 content-inside">
+                  <div class="mx-5 content-inside text-justify">
                   Zynga is a leading developer of the world's most popular social games that are played by millions of people
                   around the world each day. We are headquartered in San Francisco and have additional offices in the U.S ,
                   Canada, U.K and India. Since our founding in 2007, our mission has been to connect the world through games
@@ -14,16 +11,12 @@
                   games across Web and mobile, including FarmVille, Zynga Poker, Words With Friends, Hit it Rich! Slots and CSR.
                   </div>
                   </div>
-                  </div>
                   <br/>
 
-                  <div class="row move-left">
-                  <div class="offset-2 row">
+                  <div class="move-left">
                   <h5>What you’ll learn</h5>
-                  </div>
                   <br/>
-                  <div class="offset-2 row ">
-                  <div class="mx-5 my-3 content-inside">
+                  <div class="mx-5 content-inside">
                   Development of key game systems.<br/>
                   Contribute to design discussions and key design decisions.<br/>
                   Work closely with designers, software engineers, artists, product managers, and producers to deliver high quality
@@ -32,106 +25,90 @@
                   Clearly communicate design intent to team.<br/>
                   Experience developing mobile games for either iPhone or Android devices.</div>
                   </div>
-                  </div>
                   <br/>
 
-                  <div class="row move-left">
-                  <div class="offset-2 row">
+                  <div class="move-left">
                   <h5>Are there any course requirements or prerequisites?</h5>
-                  </div>
                   <br/>
-                  <div class="offset-2 row ">
-                  <div class="mx-5 my-3 content-inside">
+                  <div class="mx-5 content-inside">
                   This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
                   your resume.</div>
                   </div>
-                  </div>
                   <br/>
 
-                  <div class="row move-left">
-                  <div class="offset-2 row">
+                  <div class="move-left">
                   <h5>Who this course is for:</h5>
-                  </div>
                   <br/>
-                  <div class="offset-2 row ">
-                  <div class="mx-5 my-3 content-inside">
+                  <div class="mx-5 content-inside">
                   This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
                   your resume.</div>
                   </div>
-                  </div>
                   <br/>
-                  <div class="row move-left">
-                  <div class="offset-2 row">
+
+                  <div class="move-left">
                   <h5>what you will take away:</h5>
-                  </div>
                   <br/>
-                  <div class="offset-2 row ">
-                  <div class="mx-5 my-3 content-inside">
+                  <div class="mx-5 content-inside">
                   This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
                   your resume.</div>
                   </div>
+                  <br/>
+
+                  <div class="move-left">
+                        <div style="width: 100%;">
+                              <h5>Instructor:</h5>
+                        </div>
+
+                        <br/>
+
+                        <div class="mx-5 d-flex">
+                                    <span>
+                                          <img src="assets/round.png" class="round"/>
+                                    </span>
+                                    
+                                    <div class="mx-2">
+                                          <div class="Instructor">
+                                          <span class="theading" style="font-size: 1.2em;">Manu Vikraman</span>
+                                          <br/>
+                                          <span class="content-inside">CEO &amp; CDO - Swevens Immersive Studio</span>
+                                          </div>
+                                    </div>
+                        </div>
+                        <br/>
+                        <div class="text-center d-flex" style="margin-left: 6rem !important;">
+                              <div class="mx-3">
+                                    <img src="assets/round.png" class="round-small"/>
+                              </div>
+                              <div class="mx-2">
+                                    <img src="assets/round.png" class="round-small"/>
+                              </div>
+                        </div>
                   </div>
                   <br/>
 
-                  <div class="row move-left">
-                  <div class="offset-2 row" style="width: 100%;">
-                  <h5>Instructor:</h5>
+                  <div class="move-left">
+                        <h5>Duration:</h5>
+                        <br/>
+                        <div class="mx-5 theading" style="font-size: 1.2em;">
+                        2 months (Mon - Wed - Fri)
+                        </div>
                   </div>
                   <br/>
-                  <div class="offset-2 row" style="width: 100%;">
-                  <div class="mx-5 my-3 d-flex">
-                  <div class="col-2">
-                  <span>
-                  <img src="assets/round.png" class="round"/>
-                  </span>
-                  </div>
-                  <div class="col" style="width: 100%;">
-                  <div class="Instructor">
-                  <span class="theading">Manu Vikraman</span>
-                  <br/>
-                  <span class="content-inside">CEO &amp; CDO - Swevens Immersive Studio</span>
-                  </div>
-                  </div>
-                  </div>
+
+
+                  <div class="move-left">
+                        <h5>Course Fee:</h5>
+                        <br/>
+                        <div class="mx-5 text-justify">
+                        <span class="theading" style="font-size: 1.2em;">INR 25000</span> <span class="content-inside">+ Applicable taxes</span>
+                        </div>
                   </div>
 
-                  <div class="offset-3 row text-center">
-                  <div class="mx-3 col-1">
-                  <img src="assets/round.png" class="round-small"/>
-                  </div>
-                  <div class="col">
-                  <img src="assets/round.png" class="round-small"/>
-                  </div>
-                  </div>
-                  </div>
-                  <br/>
-                  <div class="row move-left">
-                  <div class="offset-2 row" style="width: 100%;">
-                  <h5>Duration:</h5>
-                  </div>
-                  <br/>
-                  <div class="offset-2 row text-justify">
-                  <div class="mx-5 my-3 theading">
-                  2 months (Mon - Wed - Fri)
-                  </div>
-                  </div>
-                  </div>
-                  <br/>
-                  <div class="row move-left">
-                  <div class="offset-2 row" style="width: 100%;">
-                  <h5>Course Fee:</h5>
-                  </div>
-                  <br/>
-                  <div class="offset-2 row text-justify">
-                  <div class="mx-5 my-3">
-                  <span class="theading">INR 25000</span> <span class="content-inside">+ Applicable taxes</span>
-                  </div>
-                  </div>
-                  </div>
-                  </div>
+                  </div><!-- ml manual align-->
                   <br/>
                   <br/>
-                  <div class="row d-flex justify-content-center">
+
+                  <div class="row d-flex justify-content-center" style="margin-bottom: 5rem;">
                   <button class="btn btn-danger theading">Register</button>
                   </div>
                   <br/>
