--- a/updated/work_bootstrap.html
+++ b/updated/work_bootstrap.html
@@ -67,10 +67,12 @@
       {
         left: 15%;
         font-family: fut;
+        color: #212020;
       }
       .c-bottom-center-heading
       {
-        font-weight: lighter;opacity: 0.6;
+        /*font-weight: lighter;opacity: 0.6;*/
+        color: #666666;
         font-family: seui;
       }
       .c-page-no
@@ -107,14 +109,28 @@
       
       </div>
 
-      <div class="mx-4  container-fluid" style="position: relative;margin-top: 3vh;">
+      <!-- <div class="mx-4  container-fluid" style="position: relative;margin-top: 3vh;">
       <div class="carousel">
         <div class="carousel-cell"><img src="assets/2.png" style="width: 60vw;"></div>
         <div class="carousel-cell"> <img src="assets/1.png" style="width:30vw;"></div>
           <div class="carousel-cell"><img src="assets/3.png" style="width: 40vw;"></div>
         <div class="carousel-cell"><img src="assets/4.png" style="width:58vw;"></div>
           <div class="carousel-cell"><a href="usdz/redvelvet.usdz" rel="ar"><img src="assets/5.png" style="width: 60vw;"></a></div>
-        <div class="carousel-cell"><a href="usdz/tansmallsofa.usdz" rel="ar"><img src="assets/6.png" style="width:30vw;"></a></div>      
+        <div class="carousel-cell"><a href="usdz/tansmallsofa.usdz" rel="ar"><img src="assets/6.png" style="width:30vw;"></a></div>  
+        <div class="carousel-cell"><img src="assets/7.jpg" style="width: 60vw;"></div>
+        <div class="carousel-cell"> <img src="assets/8.jpg" style="width:30vw;"></div>    
+      </div>
+    </div> -->
+    <div class="mx-4  container-fluid" style="position: relative;margin-top: 3vh;">
+      <div class="carousel">
+        <div class="carousel-cell"><img src="assets/2.png" style="width: 60vw;"></div>
+        <div class="carousel-cell"> <img src="assets/1.png" style="width:30vw;"></div>
+          <div class="carousel-cell"><img src="assets/3.png" style="width: 40vw;"></div>
+        <div class="carousel-cell"><img src="assets/4.png" style="width:58vw;"></div>
+          <div class="carousel-cell"><a href="usdz/redvelvet.usdz" rel="ar"><img src="assets/5.png" style="width: 60vw;"></a></div>
+        <div class="carousel-cell"><a href="usdz/tansmallsofa.usdz" rel="ar"><img src="assets/6.png" style="width:30vw;"></a></div>  
+        <div class="carousel-cell"><img src="assets/7.jpg" style="width: 60vw;"></div>
+        <div class="carousel-cell"> <img src="assets/8.jpg" style="width:30vw;"></div>    
       </div>
     </div>
 
@@ -129,7 +145,7 @@
       	<span class="c-bottom-center-heading"> <span id="bottom-center-heading">Future of education is in AR<br> Out of the box into the space</span> </span>
       </div>
       <div class="offset-2 col-1 " style="max-width: 5%;">
-      	<h5 class="c-page-no" style="font-size: 1.15em;"><span id="page-no">01</span><span style="font-weight: lighter;opacity: 0.6;">/03</span></h5>
+      	<h5 class="c-page-no" style="font-size: 1.15em;"><span id="page-no">01</span><span style="font-weight: lighter;opacity: 0.6;">/04</span></h5>
       </div>
       <div class="col-1 " style="display: flex;padding-top:8px;padding-bottom:10px;">
       	<span class="prev pl-1 cnt">
@@ -198,6 +214,10 @@
             case 3:  
                      $("#bottom-heading").html("BRING HOME EVEN <br> BEFORE YOU BUY IT");
                      $("#bottom-center-heading").html("AR experiences can now be launched directly from Safari as part of a new feature called AR Quick Look, allowing instant access for shoppers to better understand products in 3D and Augmented Reality. The possibility to go from a web-page to an AR experience with a tap is completely new."); 
+                    break;
+            case 4:  
+                     $("#bottom-heading").html("OIL RIG TRAINING <br> IN VIRTUAL REALITY");
+                     $("#bottom-center-heading").html("Creating a virtual replica of a rig is a lot cheaper than constantly ferrying students back and forth from one. Since VR technology has matured to the point where the virtual experience is as good as the real thing, students can walk away with a good grasp on their skills, albeit at a fraction of the cost."); 
                     break;
           
           }
