--- a/updated/course2.html
+++ b/updated/course2.html
@@ -1,9 +1,9 @@
-<div class="course1">
+<div class="course2">
                   <div class="ml-manual" style="font-family: seui;">
                   <div class="move-left">
-                  <h5>Course Introduction 2</h5>
+                  <h5 class="ml-head">Course Introduction 2</h5>
                   <br/>
-                  <div class="mx-5 content-inside text-justify">
+                  <div class="adjust-left content-inside text-left">
                   Zynga is a leading developer of the world's most popular social games that are played by millions of people
                   around the world each day. We are headquartered in San Francisco and have additional offices in the U.S ,
                   Canada, U.K and India. Since our founding in 2007, our mission has been to connect the world through games
@@ -14,9 +14,9 @@
                   <br/>
 
                   <div class="move-left">
-                  <h5>What you’ll learn</h5>
+                  <h5 class="ml-head">What you’ll learn</h5>
                   <br/>
-                  <div class="mx-5 content-inside">
+                  <div class="adjust-left content-inside">
                   Development of key game systems.<br/>
                   Contribute to design discussions and key design decisions.<br/>
                   Work closely with designers, software engineers, artists, product managers, and producers to deliver high quality
@@ -28,27 +28,27 @@
                   <br/>
 
                   <div class="move-left">
-                  <h5>Are there any course requirements or prerequisites?</h5>
+                  <h5 class="ml-head">Are there any course requirements or prerequisites?</h5>
                   <br/>
-                  <div class="mx-5 content-inside">
+                  <div class="adjust-left content-inside">
                   This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
                   your resume.</div>
                   </div>
                   <br/>
 
                   <div class="move-left">
-                  <h5>Who this course is for:</h5>
+                  <h5 class="ml-head">Who this course is for:</h5>
                   <br/>
-                  <div class="mx-5 content-inside">
+                  <div class="adjust-left content-inside">
                   This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
                   your resume.</div>
                   </div>
                   <br/>
 
                   <div class="move-left">
-                  <h5>what you will take away:</h5>
+                  <h5 class="ml-head">what you will take away:</h5>
                   <br/>
-                  <div class="mx-5 content-inside">
+                  <div class="adjust-left content-inside">
                   This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
                   your resume.</div>
                   </div>
@@ -56,12 +56,12 @@
 
                   <div class="move-left">
                         <div style="width: 100%;">
-                              <h5>Instructor:</h5>
+                              <h5 class="ml-head">Instructor:</h5>
                         </div>
 
                         <br/>
 
-                        <div class="mx-5 d-flex">
+                        <div class="adjust-left d-flex">
                                     <span>
                                           <img src="assets/round.png" class="round"/>
                                     </span>
@@ -87,9 +87,9 @@
                   <br/>
 
                   <div class="move-left">
-                        <h5>Duration:</h5>
+                        <h5 class="ml-head">Duration:</h5>
                         <br/>
-                        <div class="mx-5 theading" style="font-size: 1.2em;">
+                        <div class="adjust-left theading" style="font-size: 1.2em;">
                         2 months (Mon - Wed - Fri)
                         </div>
                   </div>
@@ -97,9 +97,9 @@
 
 
                   <div class="move-left">
-                        <h5>Course Fee:</h5>
+                        <h5 class="ml-head">Course Fee:</h5>
                         <br/>
-                        <div class="mx-5 text-justify">
+                        <div class="adjust-left text-justify">
                         <span class="theading" style="font-size: 1.2em;">INR 25000</span> <span class="content-inside">+ Applicable taxes</span>
                         </div>
                   </div>
