--- a/updated/clients_bootstrap.html
+++ b/updated/clients_bootstrap.html
@@ -48,7 +48,7 @@
        </div>
        <div style="margin-top: 100px;"></div>
        <div class="row justify-content-center">
-        <img src="assets/client1.png"/>
+        <img class="img-fluid" src="assets/client1.png"/>
       </div>
      </div>
         <div class="col-md-5">
@@ -57,7 +57,7 @@
          </div>
          <div style="margin-top: 100px;"></div>
          <div class="row justify-content-center">
-          <img src="assets/client2.png"/>
+          <img class="img-fluid" src="assets/client2.png"/>
         </div>
       </div>
     </div>
